--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.7"
 
 cache:
   directories:
@@ -21,11 +17,17 @@ script:
 env:
   global:
     - PIP_DOWNLOAD_CACHE="pip_download_cache"
-  matrix:
-    - TOX_ENV=py27-django1.8
-    - TOX_ENV=py27-django1.11
-    - TOX_ENV=py34-django1.11
-    - TOX_ENV=py37-django2.1
+
+matrix:
+  include:
+    - python: "2.7"
+      env: TOX_ENV=py27-django1.8
+    - python: "2.7"
+      env: TOX_ENV=py27-django1.11
+    - python: "3.4"
+      env: TOX_ENV=py34-django1.11
+    - python: "3.7"
+      env: TOX_ENV=py37-django2.1
 
 notifications:
   email:
