--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ matrix:
       env: TOX_ENV=py34-django1.11
     - python: "3.7"
       env: TOX_ENV=py37-django2.1
+      dist: xenial
+      sudo: true
 
 notifications:
   email:
