Ignore environment configuration files and file based database

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+
+# Environment variables configuration
+.env
+
+# File based database
+*.sqlite3
