--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install -e .
 
 script:
-  - tox -e $TOX_ENV
+  - python manage.py test
 
 env:
   global:
@@ -20,12 +20,6 @@ env:
 
 matrix:
   include:
-    - python: "2.7"
-      env: TOX_ENV=py27-django1.8
-    - python: "2.7"
-      env: TOX_ENV=py27-django1.11
-    - python: "3.4"
-      env: TOX_ENV=py34-django1.11
     - python: "3.7"
       env: TOX_ENV=py37-django2.1
       dist: xenial
