--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install -e .
 
 script:
-  - python manage.py test
+  - tox -e $TOX_ENV
 
 env:
   global:
@@ -20,6 +20,12 @@ env:
 
 matrix:
   include:
+    - python: "2.7"
+      env: TOX_ENV=py27-django1.8
+    - python: "2.7"
+      env: TOX_ENV=py27-django1.11
+    - python: "3.4"
+      env: TOX_ENV=py34-django1.11
     - python: "3.7"
       env: TOX_ENV=py37-django2.1
       dist: xenial
