Modified travis config

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,15 @@ deps =
     Django>=2.1,<2.2
 
 [testenv]
-passenv = MPESA_ENVIRONMENT, MPESA_CONSUMER_KEY, MPESA_CONSUMER_SECRET, MPESA_SHORTCODE, MPESA_EXPRESS_SHORTCODE, MPESA_SHORTCODE_TYPE, MPESA_PASSKEY
+passenv = 
+    MPESA_ENVIRONMENT
+	MPESA_CONSUMER_KEY
+	MPESA_CONSUMER_SECRET
+	MPESA_SHORTCODE
+	MPESA_EXPRESS_SHORTCODE
+	MPESA_SHORTCODE_TYPE
+	MPESA_PASSKEY
+
 commands =
     python {toxinidir}/setup.py test
 
