Improved STK push functionality.

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ passenv =
 	MPESA_EXPRESS_SHORTCODE
 	MPESA_SHORTCODE_TYPE
 	MPESA_PASSKEY
+    LNM_PHONE_NUMBER
 
 commands =
     python {toxinidir}/setup.py test
