Updated documentation to include B2C Payment API's

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,11 @@ MPESA_SHORTCODE_TYPE=paybill
 # Production passkey is sent via email once you go live
 
 MPESA_PASSKEY=mpesa_passkey
+
+# Username for initiator (to be used in B2C, B2B, AccountBalance and TransactionStatusQuery Transactions)
+
+MPESA_INITIATOR_USERNAME=initiator_username
+
+# Plaintext password for initiator (to be used in B2C, B2B, AccountBalance and TransactionStatusQuery Transactions)
+
+MPESA_INITIATOR_SECURITY_CREDENTIAL=initiator_security_credential
