Added B2C_PHONE_NUMBER in tox.ini environment

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ passenv =
 	MPESA_SHORTCODE_TYPE
 	MPESA_PASSKEY
     LNM_PHONE_NUMBER
+    B2C_PHONE_NUMBER
 
 commands =
     python {toxinidir}/setup.py test
