--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,10 @@ passenv =
 	MPESA_EXPRESS_SHORTCODE
 	MPESA_SHORTCODE_TYPE
 	MPESA_PASSKEY
+    MPESA_INITIATOR_USERNAME
+    MPESA_INITIATOR_SECURITY_CREDENTIAL
     LNM_PHONE_NUMBER
+    B2C_PHONE_NUMBER
 
 commands =
     python {toxinidir}/setup.py test
