Use pytest directly to test

--- a/tox.ini
+++ b/tox.ini
@@ -16,11 +16,11 @@ passenv =
     LNM_PHONE_NUMBER
     B2C_PHONE_NUMBER
 
-commands =
-    python {toxinidir}/manage.py test
-
 [testenv:py311-django4.1]
 description = Use Python 3.11 and Django 4.1 in a virtual environment and run tests against it.
 basepython = python3.11
 deps =
     Django>=4.1,<4.2
+    pytest>=7
+    pytest-sugar
+commands = pytest tests {posargs}
