Use pytest-django for tests

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,6 @@ description = Use Python 3.11 and Django 4.1 in a virtual environment and run te
 basepython = python3.11
 deps =
     Django>=4.1,<4.2
-    pytest>=7
+    pytest-django>=4
     pytest-sugar
 commands = pytest tests {posargs}
