Update test dependencies (#7)
* Remove python 2.7 from tox configuration

* Update travis config to only run specified tox tests

* Use pytest directly to test

* Removed deprecated USE_L10N setting

* Use pytest-django for tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,6 @@
 [tox]
 envlist =
-    py27-django1.8,
-    py27-django1.11,
-    py39-django2.1
-
-[django1.8]
-deps =
-    Django>=1.8,<1.9
-
-[django1.11]
-deps =
-    Django>=1.11,<2.0
-
-[django2.1]
-deps =
-    Django>=2.1,<2.2
+    py311-django4.1
 
 [testenv]
 passenv = 
@@ -30,20 +16,11 @@ passenv =
     LNM_PHONE_NUMBER
     B2C_PHONE_NUMBER
 
-commands =
-    python {toxinidir}/setup.py test
-
-[testenv:py27-django1.8]
-basepython = python2.7
+[testenv:py311-django4.1]
+description = Use Python 3.11 and Django 4.1 in a virtual environment and run tests against it.
+basepython = python3.11
 deps =
-    {[django1.8]deps}
-
-[testenv:py27-django1.11]
-basepython = python2.7
-deps =
-    {[django1.11]deps}
-
-[testenv:py39-django2.1]
-basepython = python3.9
-deps =
-    {[django2.1]deps}
+    Django>=4.1,<4.2
+    pytest-django>=4
+    pytest-sugar
+commands = pytest tests {posargs}
